openapi working, some restructuring
